--- a/rs-clone/src/styles.scss
+++ b/rs-clone/src/styles.scss
@@ -1,1 +1,16 @@
 @import '~normalize.css';
+
+.end-game {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    color: red;
+    font-size: 3rem;
+    font-family: Arial, Helvetica, sans-serif;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 10000;
+}
