--- a/rs-clone/src/styles.scss
+++ b/rs-clone/src/styles.scss
@@ -9,7 +9,7 @@
     color: red;
     font-size: 3rem;
     font-family: Arial, Helvetica, sans-serif;
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     z-index: 10000;
