--- a/rs-clone/src/styles.scss
+++ b/rs-clone/src/styles.scss
@@ -1,5 +1,11 @@
 @import '~normalize.css';
 
+html,
+body{
+    width: 100%;
+    height: 100%;
+}
+
 .end-game {
     position: fixed;
     left: 0;
@@ -12,5 +18,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 10000;
+    z-index: 999;
 }
