--- a/rs-clone/src/app/game/game.component.scss
+++ b/rs-clone/src/app/game/game.component.scss
@@ -15,4 +15,10 @@
         text-decoration: none;
         font-family: Arial, Helvetica, sans-serif;
     }
+    #game-score {
+        font-family: Arial, Helvetica, sans-serif;
+        color: gold;
+        font-size: 1.5rem;
+        margin-right: 1rem;
+    }
 }
