--- a/rs-clone/src/app/game/game.component.scss
+++ b/rs-clone/src/app/game/game.component.scss
@@ -22,3 +22,15 @@
         margin-right: 1rem;
     }
 }
+#game-loading {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1001;
+    background-image: url('../../assets/UI/loading.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #add8e6;
+}
