--- a/rs-clone/src/app/game/game.component.html
+++ b/rs-clone/src/app/game/game.component.html
@@ -1,6 +1,6 @@
 <div id="game-scene"></div>
 <div id="game-menu">
     <span id="game-score">00000</span>
-    <a routerLink="/">Menu</a>
+    <a class="main__menu" routerLink="/">Menu</a>
 </div>
 <div id="game-loading"></div>
