--- a/rs-clone/src/app/menu/menu.component.html
+++ b/rs-clone/src/app/menu/menu.component.html
@@ -1,1 +1,9 @@
-<a routerLink="/game">Play</a>
+<!-- <a routerLink="/game">Play</a>
+<a routerLink="/set">Settings</a> -->
+<menu>
+  <div class="wrapper">
+    <a class = "main-link" routerLinkActive = "active" routerLink="/game">Play</a>
+    <a class = "main-link" routerLinkActive = "active" routerLink="/set">Settings</a>
+  </div>
+</menu>
+
