--- a/rs-clone/src/app/menu/menu.component.html
+++ b/rs-clone/src/app/menu/menu.component.html
@@ -1,1 +1,11 @@
-<a routerLink="/game">Play</a>
+<div id="menu-background"></div>
+<div class="menu-outer">
+    <div id="logo"></div>
+    <div class="menu-inner">
+        <router-outlet></router-outlet>
+    </div>
+</div>
+<div id="hi">
+    <p>Cubway surfers by @zidiks, @AndreiYa, @pavelgitvasilev</p>
+    <div id="hi-play">Play!</div>
+</div>
