--- a/rs-clone/src/app/menu/home/home.component.html
+++ b/rs-clone/src/app/menu/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="menu-links">
         <a routerLink="../../game" class="menu-link menu-active-link">Play</a>
         <a class="menu-link">Shop</a>
-        <a class="menu-link">Me</a>
+        <a class="menu-link"><span id="p-name"></span></a>
         <a class="menu-link">Options</a>
     </div>
 </div>
