--- a/rs-clone/src/app/menu/home/home.component.html
+++ b/rs-clone/src/app/menu/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="home">
-    <div class="menu-links">
+    <div id="menu-links" class="menu-links">
         <a routerLink="../../game" class="menu-link menu-active-link">Play</a>
         <a class="menu-link">Shop</a>
-        <a class="menu-link"><span id="p-name"></span></a>
+        <a routerLink="/me" class="menu-link"><span id="p-name"></span></a>
         <a class="menu-link">Options</a>
     </div>
 </div>
