upd: add cancelreqanimframe

--- a/rs-clone/src/app/menu/menu.component.html
+++ b/rs-clone/src/app/menu/menu.component.html
@@ -1,6 +1,11 @@
 <div id="menu-background"></div>
 <div class="menu-outer">
     <div id="logo"></div>
+    <div class="stats">
+        <div id="coins"><span class="material-icons">
+            monetization_on
+            </span>0</div>
+    </div>
     <div class="menu-inner">
         <router-outlet></router-outlet>
     </div>
