--- a/rs-clone/src/app/menu/menu.component.scss
+++ b/rs-clone/src/app/menu/menu.component.scss
@@ -22,6 +22,14 @@
         align-items: center;
         z-index: 1000;
     }
+    .stats{
+        z-index: 1000;
+        margin: 1rem 0;
+        background: rgba($color: #000000, $alpha: 0.4);
+        color: white;
+        padding: 0.5rem;
+        border-radius: 10px;
+    }
 }
 #menu-background {
     width: 100%;
