--- a/rs-clone/src/app/game/game.component.html
+++ b/rs-clone/src/app/game/game.component.html
@@ -1,6 +1,7 @@
 <div id="game-scene"></div>
 <div id="game-menu">
     <span id="game-score">00000</span>
+    <div id="coins" *ngIf="STATES"><div class="coin-icon"></div> {{ STATES.coins }} </div>
     <a routerLink="/">Menu</a>
 </div>
 <div id="game-loading"></div>
