--- a/rs-clone/src/app/menu/menu.component.html
+++ b/rs-clone/src/app/menu/menu.component.html
@@ -2,9 +2,7 @@
 <div class="menu-outer">
     <div id="logo"></div>
     <div class="stats">
-        <div id="coins"><span class="material-icons">
-            monetization_on
-            </span>0</div>
+        <div id="coins" *ngIf="user"><div class="coin-icon"></div> {{ user.coins }} </div>
     </div>
     <div class="menu-inner">
         <router-outlet></router-outlet>
