--- a/rs-clone/src/app/menu/menu.component.scss
+++ b/rs-clone/src/app/menu/menu.component.scss
@@ -25,10 +25,27 @@
     .stats{
         z-index: 1000;
         margin: 1rem 0;
-        background: rgba($color: #000000, $alpha: 0.4);
+        background: rgba($color: #000000, $alpha: 0.3);
         color: white;
         padding: 0.5rem;
         border-radius: 10px;
+        #coins {
+            color: gold;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.3rem;
+            font-family: Arial, Helvetica, sans-serif;
+            .coin-icon {
+                background-image: url('../../assets/UI/money.svg');
+                width: 1.5rem;
+                height: 1.5rem;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: 100% auto;
+                margin-right: 0.5rem;
+            }
+        }
     }
 }
 #menu-background {
