--- a/rs-clone/src/app/game/game.component.html
+++ b/rs-clone/src/app/game/game.component.html
@@ -1,7 +1,14 @@
 <div id="game-scene"></div>
 <div id="game-menu">
-    <span id="game-score">00000</span>
-    <div id="coins" *ngIf="STATES"><div class="coin-icon"></div> {{ STATES.coins }} </div>
-    <a routerLink="/">Menu</a>
+    <div>
+        <a class="shadow-box" routerLink="/"><span class="material-icons">pause</span></a>
+    </div>
+   <div>
+        <div class="shadow-box">
+            <div><span id="game-score">00000</span><span id="newScore">HIGH SCORE!</span></div>
+            <div id="coins" *ngIf="STATES"><div class="coin-icon"></div> {{ STATES.coins }} </div>
+        </div>
+   </div>
+   
 </div>
 <div id="game-loading"></div>
