--- a/rs-clone/src/app/menu/menu.component.html
+++ b/rs-clone/src/app/menu/menu.component.html
@@ -2,7 +2,7 @@
 <div class="menu-outer">
     <div id="logo"></div>
     <div class="stats">
-        <div id="coins" *ngIf="user"><div class="coin-icon"></div> {{ user.coins }} </div>
+        <div id="coins" *ngIf="user"><div class="coin-icon"></div> {{ user.coins }} </div> <div id="coins" *ngIf="user"><div class="crown-icon"></div> {{ user.highScore }} </div>
     </div>
     <div class="menu-inner">
         <router-outlet></router-outlet>
