--- a/rs-clone/src/app/menu/menu.component.scss
+++ b/rs-clone/src/app/menu/menu.component.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     display: flex;
+    position: absolute;
     align-items: center;
     justify-content: center;
     flex-direction: column;
