--- a/rs-clone/src/app/menu/menu.component.html
+++ b/rs-clone/src/app/menu/menu.component.html
@@ -9,6 +9,6 @@
     </div>
 </div>
 <div id="hi">
-    <p>Cubway surfers by @zidiks, @AndreiYa, @pavelgitvasilev</p>
+    <!-- <p>Cubway surfers by @zidiks, @AndreiYa, @pavelgitvasilev</p> -->
     <div id="hi-play">Play!</div>
 </div>
