--- a/rs-clone/src/app/welcome/welcome.component.html
+++ b/rs-clone/src/app/welcome/welcome.component.html
@@ -1,1 +1,49 @@
-<p>welcome works!</p>
+<div class="welcome">
+    <section class="start-section">
+        <div class="bg-video">
+            <!-- <video autoplay muted loop id="myVideo">
+                <source src="assets/promo.mp4" type="video/mp4">
+            </video> -->
+        </div>
+        <div class="logo"></div>
+        <div class="start-content">
+           <div id="model"></div>
+        </div>
+    </section>
+    <section class="play-section">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus id odio laborum dignissimos voluptas officiis enim quisquam labore ullam, autem fugit corrupti eos est praesentium? Debitis veritatis porro eaque fuga.</p>
+        <button routerLink="/">Let's go!</button>
+    </section>
+    <section class="feat-section">
+        <div class="feat-box">
+            <div class="feat-img">
+                <img src="assets/feat-models.png" style="width: 100%;" alt="">
+            </div>
+            <div class="feat-text">
+                Unique 3D models in voxel style.
+            </div>
+        </div>
+        <div class="feat-box feat-invert">
+            <div class="feat-text" style="text-align: right;">
+                Skins and purchases system.
+            </div>
+            <div class="feat-img">
+                <img src="assets/feat-skins.png" style="width: 60%; margin-right: 20%;" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="technologies-section">
+        <h2>Technologies</h2>
+        <div class="tech-logos">
+            <img src="assets/firebase-logo.png" alt="">
+            <img src="assets/three-js-logo.png" alt="">
+            <img src="assets/angular-logo.png" alt="">
+        </div>
+    </section>
+    <section class="team-section">
+        <h2>Team</h2>
+    </section>
+    <!-- <section class="video-section">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/10rCEw8TtFQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section> -->
+</div>
