--- a/rs-clone/src/app/welcome/welcome.component.html
+++ b/rs-clone/src/app/welcome/welcome.component.html
@@ -12,7 +12,7 @@
     </section>
     <section class="play-section">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus id odio laborum dignissimos voluptas officiis enim quisquam labore ullam, autem fugit corrupti eos est praesentium? Debitis veritatis porro eaque fuga.</p>
-        <button routerLink="/">Let's go!</button>
+        <button routerLink="/loader">Let's go!</button>
     </section>
     <section class="feat-section">
         <div class="feat-box">
