--- a/rs-clone/src/app/menu/home/home.component.html
+++ b/rs-clone/src/app/menu/home/home.component.html
@@ -3,6 +3,6 @@
         <a routerLink="../../game" class="menu-link menu-active-link">Play</a>
         <a routerLink="/shop" class="menu-link">Shop</a>
         <a routerLink="/me" class="menu-link"><span id="p-name"></span></a>
-        <a class="menu-link">Options</a>
+        <a routerLink="/options" class="menu-link">Options</a>
     </div>
 </div>
