--- a/rs-clone/src/app/menu/menu.component.html
+++ b/rs-clone/src/app/menu/menu.component.html
@@ -10,5 +10,7 @@
 </div>
 <div id="hi">
     <!-- <p>Cubway surfers by @zidiks, @AndreiYa, @pavelgitvasilev</p> -->
-    <div id="hi-play">Play!</div>
+    <div id="hi-play">
+      <div class="btn"></div>
+    </div>
 </div>
