--- a/rs-clone/src/app/menu/menu.component.scss
+++ b/rs-clone/src/app/menu/menu.component.scss
@@ -85,5 +85,13 @@
     z-index: 1100;
     #hi-play {
         cursor: pointer;
+        .btn{
+          background: url('../../assets/loader/start.png');
+          width: 15rem;
+          height: 15rem;
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: 100% auto;
+        }
     }
 }
