feat: email verification

--- a/rs-clone/src/app/menu/home/home.component.html
+++ b/rs-clone/src/app/menu/home/home.component.html
@@ -2,7 +2,7 @@
     <div id="menu-links" class="menu-links">
         <a routerLink="../../game" class="menu-link menu-active-link">Play</a>
         <a routerLink="/shop" class="menu-link">Shop</a>
-        <a routerLink="/me" class="menu-link"><span id="p-name"></span></a>
+        <a routerLink="/me" class="menu-link"><span id="p-name"> {{ AllMenu.user?.displayName || 'No Name' }} </span></a>
         <a routerLink="/options" class="menu-link">Options</a>
     </div>
 </div>
