--- a/rs-clone/src/app/sign-up/sign-up.component.html
+++ b/rs-clone/src/app/sign-up/sign-up.component.html
@@ -7,13 +7,17 @@
         <div class="formGroup">
           <input type="email" class="formControl" placeholder="Email Address" #userEmail required>
         </div>
+
+        <div class="formGroup">
+          <input type="name" class="formControl" placeholder="User Name" #userName required>
+        </div>
   
         <div class="formGroup">
           <input type="password" class="formControl" placeholder="Password" #userPwd required>
         </div>
   
         <div class="formGroup">
-          <input type="button" class="btn btnPrimary" value="Sign Up" (click)="authService.SignUp(userEmail.value, userPwd.value)">
+          <input type="button" class="btn btnPrimary" value="Sign Up" (click)="authService.SignUp(userEmail.value, userPwd.value, userName.value)">
         </div>
   
         <div class="formGroup">
