--- a/rs-clone/src/app/verify/verify.component.html
+++ b/rs-clone/src/app/verify/verify.component.html
@@ -1,8 +1,9 @@
-<div class="displayTable">
+  <div class="displayTable">
+    <h3>Verfiy your E-mail</h3>
     <div class="displayTableCell">
   
       <div class="authBlock">
-        <h3>Thank You for Registering</h3>
+        <p>Thank You for Registering!</p>
   
         <div class="formGroup" *ngIf="authService.userData as user">
           <p class="text-center">We have sent a confirmation email to <strong>{{user.email}}</strong>.</p>
@@ -20,8 +21,10 @@
       </div>
   
       <div class="redirectToLogin">
-        <span>Go back to?<span class="redirect" routerLink="/sign-in"> Sign in</span></span>
+        <span>Go back to?</span>
+        <button class="redirect btn" routerLink="/login"> Sign in</button>
       </div>
   
     </div>
   </div>
+  
