--- a/rs-clone/src/app/menu/home/home.component.html
+++ b/rs-clone/src/app/menu/home/home.component.html
@@ -4,5 +4,6 @@
         <a routerLink="/shop" class="menu-link">Shop</a>
         <a routerLink="/me" class="menu-link"><span id="p-name"> {{ AllMenu.user?.displayName || 'No Name' }} </span></a>
         <a routerLink="/options" class="menu-link">Options</a>
+        <a routerLink="/welcome" class="menu-link">Site</a>
     </div>
 </div>
