--- a/rs-clone/src/app/game/game.component.scss
+++ b/rs-clone/src/app/game/game.component.scss
@@ -59,11 +59,11 @@
             0% {
                 transform: scale(1.1) rotate(7deg);
             }
-        
+
             70% {
                 transform: scale(1) rotate(7deg);
             }
-        
+
             100% {
                 transform: scale(1.1) rotate(7deg);
             }
@@ -87,7 +87,7 @@
             }
         }
     }
-    
+
 }
 #game-loading {
     position: fixed;
@@ -101,3 +101,6 @@
     background-position: center;
     background-color: #add8e6;
 }
+// .end-game {
+//   background: url("../../assets/UI/start.png");
+// }
