upd: add end-stats component

--- a/rs-clone/src/app/menu/home/home.component.html
+++ b/rs-clone/src/app/menu/home/home.component.html
@@ -6,5 +6,6 @@
         <a routerLink="/me" class="menu-link"><span id="p-name"> {{ AllMenu.user?.displayName || 'No Name' }} </span></a>
         <a routerLink="/options" class="menu-link">Options</a>
         <a routerLink="/welcome" class="menu-link">Site</a>
+        <a routerLink="/end-stats" class="menu-link">Stats</a>
     </div>
 </div>
