--- a/rs-clone/src/app/menu/menu.component.scss
+++ b/rs-clone/src/app/menu/menu.component.scss
@@ -95,3 +95,29 @@
         }
     }
 }
+
+#game-loading {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    .loading-box {
+        width: 70%;
+        height: 2rem;
+        border: 5px solid black;
+        margin-bottom: 2rem;
+        background: linear-gradient(to right, rgb(90, 184, 247) 20%, white 20% 80%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: 'Press Start 2P', cursive;
+    }
+}
