--- a/rs-clone/src/app/game/game.component.html
+++ b/rs-clone/src/app/game/game.component.html
@@ -1,7 +1,7 @@
 <div id="game-scene"></div>
 <div id="game-menu">
     <div>
-        <a class="shadow-box" routerLink="/"><span class="material-icons">pause</span></a>
+        <a class="shadow-box" (click)="PAUSE()"><span class="material-icons"> {{ PAUSEICON }} </span></a>
     </div>
    <div>
         <div class="shadow-box">
