feat: added adaptiv and correct image

--- a/rs-clone/src/app/welcome/welcome.component.html
+++ b/rs-clone/src/app/welcome/welcome.component.html
@@ -7,29 +7,37 @@
         </div>
         <div class="logo"></div>
         <div class="start-content">
-           <div id="model"></div>
+            <div id="model"></div>
         </div>
     </section>
     <section class="play-section">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus id odio laborum dignissimos voluptas officiis enim quisquam labore ullam, autem fugit corrupti eos est praesentium? Debitis veritatis porro eaque fuga.</p>
-        <button routerLink="/loader">Let's go!</button>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus id odio laborum dignissimos voluptas
+            officiis enim quisquam labore ullam, autem fugit corrupti eos est praesentium? Debitis veritatis porro eaque
+            fuga.</p>
+        <button routerLink="/">Let's go!</button>
     </section>
     <section class="feat-section">
         <div class="feat-box">
             <div class="feat-img">
-                <img src="assets/feat-models.png" style="width: 100%;" alt="">
+                <img src="assets/feat-models.png" class="feat-img-house" alt="">
             </div>
             <div class="feat-text">
                 Unique 3D models in voxel style.
             </div>
         </div>
         <div class="feat-box feat-invert">
-            <div class="feat-text" style="text-align: right;">
+            <div class="feat-text skin-text" style="text-align: right;">
                 Skins and purchases system.
             </div>
             <div class="feat-img">
-                <img src="assets/feat-skins.png" style="width: 60%; margin-right: 20%;" alt="">
+                <img src="assets/feat-skins.png" alt="" class="feat-img-man">
             </div>
+        </div>
+    </section>
+    <section class="controls-section">
+        <h2>Controls</h2>
+        <div class="tech-logos">
+            <img src="assets/keys_optimized.jpg" alt="">
         </div>
     </section>
     <section class="technologies-section">
@@ -42,7 +50,43 @@
     </section>
     <section class="team-section">
         <h2>Team</h2>
+        <div class="tech-logos">
+            <div class="team-name name">
+                <div class="feat-text" style="text-align: right;">
+                    Владимир<br> Миронов
+                </div>
+                <img class="dotted" src="assets/vova.jpg" alt="">
+            </div>
+            <div class="team-name name">
+                <div class="feat-text" style="text-align: right;">
+                    Андрей<br> Якименко
+                </div>
+                <img class="dotted" src="assets/andrei.jpg" alt="">
+            </div>
+            <div class="team-name name">
+                <div class="feat-text" style="text-align: right;">
+                    Павел<br> Васильев
+                </div>
+                <img class="dotted" src="assets/pasha.jpeg" alt="">
+            </div>
+        </div>
     </section>
+    <footer class="footer">
+        <div class="footer-git">
+            <div class="feat-text" style="text-align: right;">
+                <a href="" target="_blank">Владимир<br> Миронов</a>
+            </div>
+            <div class="feat-text" style="text-align: right;">
+                <a href="" target="_blank">Андрей<br> Якименко</a>
+            </div>
+            <div class="feat-text" style="text-align: right;">
+                <a href="" target="_blank">Павел<br> Васильев</a>
+            </div>
+        </div>
+        <a class="footer-logo" href="https://rs.school/js/" target="_blank"><img src="assets/rs_school_js.svg"
+                alt=""></a>
+
+    </footer>
     <!-- <section class="video-section">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/10rCEw8TtFQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section> -->
