upd: new welcome text

--- a/rs-clone/src/app/welcome/welcome.component.html
+++ b/rs-clone/src/app/welcome/welcome.component.html
@@ -8,9 +8,7 @@
         </div>
     </section>
     <section class="play-section">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus id odio laborum dignissimos voluptas
-            officiis enim quisquam labore ullam, autem fugit corrupti eos est praesentium? Debitis veritatis porro eaque
-            fuga.</p>
+        <p>Сubway Surfers in a clone of the well known Subway Surfers game. The are a lot of unique 3d models, environments, trains, holes and of course coins. it will by fun. Play enjoy and raise yor score!</p>
         <button routerLink="/loader">Let's go!</button>
     </section>
     <section class="feat-section">
